--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 
 {
-  "name": "omnisaas-ai-platform",
+  "name": "file-pilot-ai",
   "version": "1.0.0",
   "private": true,
+  "type": "module",
   "dependencies": {
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -10,9 +11,15 @@
     "@google/genai": "^1.34.0"
   },
   "devDependencies": {
-    "typescript": "^5.0.0"
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
+    "@vitejs/plugin-react": "^4.3.4",
+    "typescript": "^5.7.0",
+    "vite": "^6.0.0"
   },
   "scripts": {
-    "build": "echo 'No build step required for ESM deployment'"
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview"
   }
 }
