--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "lucide-react": "^0.460.0",
-    "@google/genai": "^1.34.0"
+    "@google/genai": "^1.34.0",
+    "@supabase/supabase-js": "^2.45.4"
   },
   "devDependencies": {
     "@types/node": "^22.0.0",
